# fossil-time

./: README.md  SECURITY.md  meson.build
.github/ciimage/: Dockerfile.fedora
.github/workflows/: meson_ci.yml
code/logic/: calendar.c  date.c  holiday.c  meson.build  season.c  sleep.c  span.c  timer.c
code/logic/fossil/time/: calendar.h  date.h  framework.h  holiday.h  season.h  sleep.h  span.h  timer.h
code/tests/: meson.build
code/tests/cases/: test_calendar.c  test_calendar.cpp  test_date.c  test_date.cpp  test_holiday.c  test_holiday.cpp  test_season.c  test_season.cpp  test_sleep.c  test_sleep.cpp  test_span.c  test_span.cpp  test_timer.c  test_timer.cpp
